--- a/src/index.html
+++ b/src/index.html
@@ -8,19 +8,56 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <script>Function.prototype.bind = Function.prototype.bind || function (thisp) {
-    var fn = this;
-    return function () {
-        return fn.apply(thisp, arguments);
-    };
-};</script>
-<script src="http://www.google.com/jsapi"></script>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="http://www.cloudformatter.com/Resources/Pages/CSS2Pdf/Script/xepOnline.jqPlugin.js"></script>
+ 
 
 </head>
 <body>
   <app-root></app-root>
+  
+  <script src="http://www.google.com/jsapi"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="http://www.cloudformatter.com/Resources/Pages/CSS2Pdf/Script/xepOnline.jqPlugin.js"></script>
+  <script>
+    var KTAppOptions = {
+      "colors": {
+        "state": {
+          "brand": "#716aca",
+          "light": "#ffffff",
+          "dark": "#282a3c",
+          "primary": "#5867dd",
+          "success": "#34bfa3",
+          "info": "#36a3f7",
+          "warning": "#ffb822",
+          "danger": "#fd3995"
+        },
+        "base": {
+          "label": ["#c5cbe3", "#a1a8c3", "#3d4465", "#3e4466"],
+          "shape": ["#f0f3ff", "#d9dffa", "#afb4d4", "#646c9a"]
+        }
+      }
+    };
+  </script>
+
+  <!-- end::Global Config -->
+
+  <!--begin::Global Theme Bundle(used by all pages) -->
+  <script src="/assets/plugins/global/plugins.bundle.js" type="text/javascript"></script>
+  <script src="/assets/js/scripts.bundle.js" type="text/javascript"></script>
+
+  <!--end::Global Theme Bundle -->
+
+  <!--begin::Page Vendors(used by this page) -->
+  <script src="/assets/plugins/custom/fullcalendar/fullcalendar.bundle.js" type="text/javascript"></script>
+  <script src="//maps.google.com/maps/api/js?key=AIzaSyBTGnKT7dt597vo9QgeQ7BFhvSRP4eiMSM" type="text/javascript"></script>
+  <script src="/assets/plugins/custom/gmaps/gmaps.js" type="text/javascript"></script>
+  <script src="/assets/plugins/custom/ckeditor/ckeditor-document" type="text/javascript"></script>
+  <!--end::Page Vendors -->
+  <script src="/assets/js/pages/custom/projects/add-project.js" type="text/javascript"></script>
+
+  <!--begin::Page Scripts(used by this page) -->
+  <script src="/assets/js/pages/dashboard.js" type="text/javascript"></script>
+  <script src="../../../node_modules/@ckeditor/ckeditor5-build-inline/build/ckeditor.js"></script>
+
 </body>
 </html>
